tests/models/enum/unnamed/vec/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(alias = "val")]
        Vec<()>
    ),
}
fn main() {}
