tests/models/enum/unnamed/vec/fail/alias.stderr
error: No support alias term on the unnamed field.
 --> tests/models/enum/unnamed/vec/fail/alias.rs:4:10
  |
4 |       Value(
  |  __________^
5 | |        #[field(alias = "val")]
6 | |         Vec<()>
7 | |     ),
  | |_____^
